# executable_library

./: CMakeLists.txt  main.cpp
cmake/modules/: FindELFInterpreter.cmake  MacroGetGitDetails.cmake
lib/: CMakeLists.txt  dump_function.cpp  samplelib.cpp  samplelib.h
